// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateRouteTree > basic > (0) "/" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
  },
  "pages": {
    "/": </page.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (1) "/other" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/other",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/other": <RedirectBoundary>
      <LayoutContent
        name="/other"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/other": </other/page.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/other",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (2) "/not-found" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/not-found",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/not-found": <RedirectBoundary>
      <LayoutContent
        name="/not-found"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/not-found": <ThrowNotFound
      params={{}}
      request={
        {
          "url": "https://test.local/not-found",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (3) "/test" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
  },
  "pages": {
    "/test": </test/page.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (4) "/test/other" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test/other",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test/other",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/other": <RedirectBoundary>
      <LayoutContent
        name="/test/other"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/test/other": </test/other/page.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test/other",
        }
      }
    />,
  },
}
`;

exports[`generateRouteTree > basic > (5) "/test/not-found" 1`] = `
{
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test/not-found",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "url": "https://test.local/test/not-found",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/not-found": <RedirectBoundary>
      <LayoutContent
        name="/test/not-found"
      />
    </RedirectBoundary>,
  },
  "pages": {
    "/test/not-found": </test/[dynamic]/page.tsx
      params={
        {
          "dynamic": "not-found",
        }
      }
      request={
        {
          "url": "https://test.local/test/not-found",
        }
      }
    />,
  },
}
`;
